recruitment and monuments

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,6 +10,10 @@ div .odd-row {
   background-color: #cdcdcd;
 }
 
+input[type=text] {
+    width: 30px;
+}
+
 @media only print {
   .no-print {
     display: none;
