--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,7 +18,7 @@ input[type=text] {
 
 @media only print {
   .reports {
-    font-family: 'Special Elite';
+    font-family: 'Special Elite', cursive;
   }
   .no-print {
     display: none;
