--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,6 +19,10 @@ input[type=text] {
     width: 30px;
 }
 
+.tab-print-title {
+    display:none;
+}
+
 @media only print {
   .reports {
     font-family: 'remington-cz';
@@ -31,6 +35,19 @@ input[type=text] {
   }
   .nav.nav-tabs {
     border-bottom: 0px;
+  }
+  .tab-content > .tab-pane {
+      display: block !important;
+      opacity: 1 !important;
+      visibility: visible !important;
+      page-break-after: always;
+  }
+  #main-title {
+    display: none;
+  }
+  .tab-print-title {
+    margin: 80px 0px 30px 0px;
+    display: block;
   }
   @page {
     margin: 0;
